@@ -15,6 +15,7 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.List;
+import java.util.Locale;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.function.Supplier;
@@ -23,13 +24,17 @@ import static ibhist.StringUtils.print;
 
 public class ReplImpl implements Repl {
     private static final Logger log = LogManager.getLogger(ReplImpl.class.getSimpleName());
+    private static final DateTimeFormatter tradeDateformatter = DateTimeFormatter.ofPattern("EEE d MMMM");
     private final IBConnector connector;
+    private final TimeSeriesRepository tsRepository;
     private final Supplier<PriceHistoryRepository> repository = Suppliers.memoize(() -> new PriceHistoryRepository(Path.of("c:\\temp\\ultra"), ".csv"));
     private PriceHistory history = null;
 
+
     @Inject
-    public ReplImpl(IBConnector connector) {
+    public ReplImpl(IBConnector connector, TimeSeriesRepository repository) {
         this.connector = connector;
+        this.tsRepository = repository;
     }
 
     public void run() {
@@ -51,32 +56,35 @@ public class ReplImpl implements Repl {
             if (!input.isEmpty()) {
                 print("[yellow]" + line + "[/]");
                 String cmd = input.get(0).toLowerCase();
-                String arg1 = input.size() > 1 ? input.get(1) : null;
+                String noun = input.size() >= 2 ? input.get(1).toLowerCase() : "";
                 if (cmd.equals("x")) {
+                    processTws(List.of("disc"));
                     break;
-                } else if (cmd.equals("load") && arg1 != null) {
-                    load(arg1);
+                } else if (cmd.equals("load")) {
+                    load(noun);
                 } else if (cmd.equals("info") && history != null) {
-                    info(parseInt(arg1, -1));
-                } else if (cmd.equals("ib")) {
-                    requestHistoricData();
+                    info(parseInt(noun, -1));
+                } else if (noun.equals("tws")) { // conn disc
+                    processTws(input);
+                } else if (noun.equals("es")) { // show stream end-stream
+                    requestHistoricData(cmd);
                 } else if (cmd.equals("rt")) {
                     processRt(input, monitorManager);
                 } else if (cmd.equals("minmax") && history != null) {
-                    printMinMax(parseInt(arg1, 15));
-                } else if (cmd.equals("p") && arg1 != null && history != null) {
+                    printMinMax(parseInt(noun, 15));
+                } else if (cmd.equals("p") && history != null) {
                     // param 1 = offset, -offset, hh:mm
-                    if (arg1.contains(":")) {
+                    if (noun.contains(":")) {
                         PriceHistory.Index index = history.index();
                         var entries = index.entries();
-                        tryParseTime(arg1, entries.getLast().tradeDate()).ifPresent(barTime -> {
+                        tryParseTime(noun, entries.getLast().tradeDate()).ifPresent(barTime -> {
                             int i = history.find(barTime);
                             if (i > 0) {
                                 printHistory(i - 9, i + 10);
                             }
                         });
                     } else {
-                        tryParseInt(arg1).ifPresent(this::printHistory);
+                        tryParseInt(noun).ifPresent(this::printHistory);
                     }
                 } else {
                     // process "add monitor > 5924.25"
@@ -87,11 +95,42 @@ public class ReplImpl implements Repl {
         reader.close();
     }
 
-    private void requestHistoricData() {
-        connector.connect();
-        var action = connector.getHistoricalData("ES", IBConnectorImpl.CONTRACT_MONTH, Duration.DAY_5, false);
-        history = action.asPriceHistory();
-        connector.disconnect();
+    private boolean requestHistoricData(String cmd) {
+        return switch (cmd) {
+            case "show" -> {
+                var action = connector.getHistoricalData("ES", IBConnectorImpl.CONTRACT_MONTH, Duration.DAY_1, false);
+                history = action.asPriceHistory();
+                print(history.toString());
+                var path = action.save(history.index().entries().getFirst().tradeDate());
+                tsRepository.append(history);
+                print(history.toString());
+                yield true;
+            }
+            case "stream" -> {
+                connector.requestHistoricalData("ES", IBConnectorImpl.CONTRACT_MONTH, Duration.DAY_1, true);
+                yield true;
+            }
+            case "end-stream" -> {
+                print(connector.actionsToString());
+                connector.findByType(HistoricalDataAction.class)
+                        .ifPresent(a -> {
+                            var action = connector.waitForHistoricalData();
+                            history = action.asPriceHistory();
+                            print(history.toString());
+                            var path = action.save(history.index().entries().getFirst().tradeDate());
+                        });
+                yield true;
+            }
+            default -> false;
+        };
+    }
+
+    private boolean processTws(List<String> input) {
+        if (input.getFirst().startsWith("conn"))
+            connector.connect();
+        else if (input.getFirst().startsWith("disc"))
+            connector.disconnect();
+        return true;
     }
 
     // commands rt / rt cancel
@@ -144,18 +183,18 @@ public class ReplImpl implements Repl {
     }
 
     private void printMinMax(int n) {
-        var hi = history.localMax("high", n, "local_high");
-        var lo = history.localMin("low", n, "local_low");
+//        var hi = history.localMin("high", n, "local_high"); //TODO hacked from localMax
+//        var lo = history.localMin("low", n, "local_low");
         StringBuilder sb = new StringBuilder();
-        sb.append("\n[yellow]local high / low %d[/]\n".formatted(n));
-        for (int i = history.length() - 240; i < history.length(); ++i) {
-            if (hi.values[i] > 0) {
-                sb.append(String.format("[green]%s %.2f hi ▲[/]\n", history.getDates()[i].toLocalTime(), hi.values[i]));
-            }
-            if (lo.values[i] > 0) {
-                sb.append(String.format("[red]%s %.2f lo ▼[/]\n", history.getDates()[i].toLocalTime(), lo.values[i]));
-            }
-        }
+//        sb.append("\n[yellow]local high / low %d[/]\n".formatted(n));
+//        for (int i = history.length() - 240; i < history.length(); ++i) {
+//            if (hi.values[i] > 0) {
+//                sb.append(String.format("[green]%s %.2f hi ▲[/]\n", history.getDates()[i].toLocalTime(), hi.values[i]));
+//            }
+//            if (lo.values[i] > 0) {
+//                sb.append(String.format("[red]%s %.2f lo ▼[/]\n", history.getDates()[i].toLocalTime(), lo.values[i]));
+//            }
+//        }
         sb.append("[yellow]---[/]");
         print(sb.toString());
     }
@@ -181,13 +220,10 @@ public class ReplImpl implements Repl {
         List<PriceHistory.IndexEntry> entries = index.entries();
         n = (n + entries.size()) % entries.size();
         PriceHistory.IndexEntry entry = entries.get(n);
-        var map = index.makeMessages(entry, n >= 1 ? entries.get(n - 1) : null);
         var sb = new StringBuilder();
-        sb.append("\n[yellow]---\ntrade date ").append(entry.tradeDate().toString()).append("[/]\n\n");
-        for (String s : map.reversed().values()) {
-            sb.append(s).append(System.lineSeparator());
-        }
-        print(sb);
+        String formattedDate = entry.tradeDate().format(tradeDateformatter.withLocale(Locale.ENGLISH));
+        sb.append("\n[yellow]---\ntrade date ").append(formattedDate).append("[/]\n\n");
+        print(history.intradayPriceInfo(n));
         //TODO: figure this out and add to history.print to can see volume spikes
 //        if (entry.rthStart() > 0) {
 //            var rollingStandardize = history.rolling_standardize("volume", 30, "volstd");
